--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <Meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Aaliyah Forbes | WDD130</title>
+        <title> aaliyah forbes | WDD 130</title>
     </head>
     <body>
         <header>
@@ -13,12 +13,12 @@
             </nav>
         </header>
         <main>
-            <h1> Aaliyah Forbes | WDD 130</h1>
-            <img scr="image/profile.jpg" alt="Hello, my name is Aaliyah Forbes" width="200">
-            <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
+            <h1>aaliyah forbes | WDD 130</h1>
+            <img scr="image/profile.jpg" alt="Hello, my name is Aaliyah Forbes" width="300">
+            <p>hello! my name is aaliyah forbes and i am from kingstown, saint vincent and the grenadines. I enjoy watching anime</p>
         </main>
         <footer>
-            <p>©️2025 Aaliyah Forbes Kingstown, Saint Vincent and the Grenadines</p>
+            <p>©️2025 aaliyah forbes kingstown, saint vincent and the grenadines</p>
         </footer>
     </body>
 </html>
