--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <Meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> aaliyah forbes | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
+
     <body>
         <header>
             <nav>
@@ -14,11 +16,13 @@
         </header>
         <main>
             <h1>Aaliyah Forbes | WDD 130</h1>
-            <img:="image/profile.jpg" alt="Hello, my name is Aaliyah Forbes" width="200">
-            <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
+            <img src="image/profile.jpg" alt="profile.jpg" width="200">
+            <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime
+            </p>
         </main>
         <footer>
             <p>©️2025 Aaliyah Forbes Kingstown, Saint Vincent and the Grenadines</p>
         </footer>
     </body>
-</html>
+
+    </html>
