--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!doctype html>
 <html lang="en-US">
-    <head>
-        <Meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> aaliyah forbes | WDD 130</title>
-        <link rel="stylesheet" href="styles/styles.css">
-    </head>
+    
+<head>
+    <Meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title> aaliyah forbes | WDD 130</title>
+    <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
+    <meta name="author" content="your name">
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
 
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting website</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Aaliyah Forbes | WDD 130</h1>
-            <img src="image/profile.jpg" alt="profile.jpg" width="200">
-            <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime
-            </p>
-        </main>
-        <footer>
-            <p>©️2025 Aaliyah Forbes Kingstown, Saint Vincent and the Grenadines</p>
-        </footer>
-    </body>
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        </nav>
+    </header>
+    <main>
+    <h1>Aaliyah Forbes | WDD 130</h1>
+    <img src="image/profile.jpg" alt="profile.jpg" width="200">
+    <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
+</main>
+<aside>
+<h2>Kingstown</h2>
+<img src="image/Kingstown.jpg" alt="Kingstown land">
+<p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Goldenapple Juice and our National Bird is called the Amazona Guildingii</p>
+</aside>
+<footer>
+    <p>©️2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
+    </footer>
+</body>
 
-    </html>
+</html>
