--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
     <meta name="author" content="your name">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
