--- a/wwr/images/styles.css/about.html
+++ b/wwr/images/styles.css/about.html
@@ -24,21 +24,21 @@
                 <img src="images/z-raftingbw.png" alt="z-raftingbw.png" width 200>
                 <h1> Rafting Company Name</h1>
                 <article>
-                <img src="images/" alt="">
-                <p>
+                <img src="images/rafting59_600.jpg" alt="rafting59_600">
+                <p> purpose, MIssion, Motto
         </article>
             </div> 
                 <section>
                 <h2>History</h2>
-                <p>....</p>
+                <p>History of the company where it first begin....</p>
                 </section> 
         <section>
             <h2>Adventure Awaits You!</h2>
-                <img src=""
-                <img src=""
-                <img src=""
-                <img src=""
-                <img src=""
+                <img src="image/elves-chasm.jpg" alt="elves-chasm" >
+                <img src="rafting19_600.jpg" alt="rafting19_600">
+                <img src="rafting26_600.jpg" alt="rafting26_600">
+                <img src="rafting58_600.jpg" alt="rafting58_600">
+                <img src="rafting64_600.jpg" alt="rafting64_600">
         </section>
         </main>
         <footer>
