--- a/wwr/images/styles.css/about.html
+++ b/wwr/images/styles.css/about.html
@@ -42,7 +42,18 @@
         </section>
         </main>
         <footer>
-
+<p>©️2025 white water Rafting | Aaliyah Forbes </p>
+<nav class="Sociallinks">
+    <a href="https://facebook.com">
+    <img src="images/facebook.wepb" alt="facebook">
+</a>
+<a href="https://whatsapp.com">
+<img src="images/whatsapp.png" alt="whatsapp">
+</a>
+<a href="https://instagram.com">
+<img src="images/instagram.wepb" alt="instagram">
+</a>
+</nav>
         </footer>
                 
 
