--- a/wwr/images/styles.css/about.html
+++ b/wwr/images/styles.css/about.html
@@ -22,30 +22,30 @@
     </header>
         <main>
             <div class="hero">
-                <img src="images/z-raftingbw.png" alt="z-raftingbw.png" width 200>
+                <img src="images/z-raftingbw.png" alt="imagelogo" width 200>
                 <h1> Rafting Company</h1>
                 <article>
-                <img src="images/rafting59_600.jpg" alt="rafting59_600">
-                <p> purpose, MIssion, Motto
+                <img src="images/rafting59_600.jpg" alt="Siteimage">
+                <p> Purpose, Mission, Motto
         </article>
             </div> 
                 <section>
                 <h2>History</h2>
-                <p>History of the company where it first begin....</p>
+                <p>History of the company how it began etc....</p>
                 </div>
-                
+
                 </section> 
         <section>
             <h2>Adventure Awaits You!</h2>
-                <img src="image/elves-chasm.jpg" alt="elves-chasm" >
-                <img src="rafting19_600.jpg" alt="rafting19_600">
-                <img src="rafting26_600.jpg" alt="rafting26_600">
-                <img src="rafting58_600.jpg" alt="rafting58_600">
-                <img src="rafting64_600.jpg" alt="rafting64_600">
+                <img src="image/elves-chasm.jpg" alt="theme 1" >
+                <img src="rafting19_600.jpg" alt="theme 2">
+                <img src="rafting26_600.jpg" alt="theme 3">
+                <img src="rafting58_600.jpg" alt="theme 4">
+                <img src="rafting64_600.jpg" alt="theme 5">
         </section>
         </main>
         <footer>
-<p>©️2025 white water Rafting | Aaliyah Forbes </p>
+<p>©️2025 White Water Rafting | Aaliyah Forbes </p>
 <nav class="Sociallinks">
     <a href="https://facebook.com">
     <img src="images/facebook.wepb" alt="facebook">
