--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
     <meta name="author" content="your name">
     <link rel="stylesheet" href="styles/styles.css">
+    <limk rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -16,19 +17,23 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <img src="images/z-raftingbw.png" alt="imagelogo" width 200>
+                <div class="Navigation">
+                <a href="Index.html">Home</a>
+                <a href="about.html">About us</a>
+                <a href="Trips.html">Trips</a>
+                <a href="Contacts.html">Contact us</a>
+            </div>
         </nav>
     </header>
     <main>
     <h1>Aaliyah Forbes | WDD 130</h1>
-    <img src="image/profile.jpg" alt="profile.jpg" width="200">
+    <img src="images/profile.jpg" alt="profile.jpg" width="200">
     <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
 </main>
 <aside>
 <h2>Kingstown</h2>
-<img src="image/Kingstown.jpg" alt="Kingstown land">
+<img src="images/kingstown.jpg" alt="Kingstown land">
 <p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Goldenapple Juice and our National Bird is called the Amazona Guildingii</p>
 </aside>
 <footer>
