--- a/about.html
+++ b/about.html
@@ -44,25 +44,28 @@
                 </section> 
         <section>
             <h2>Adventure Awaits You!</h2>
-                <img src="images/elves-chasm.jpg" alt="theme 1" >
-                <img src="images/rafting19_600.jpg" alt="theme 2">
-                <img src="images/rafting26_600.jpg" alt="theme 3">
-                <img src="images/rafting58_600.jpg" alt="theme 4">
-                <img src="images/rafting64_600.jpg" alt="theme 5">
+            <div class="Caption">
+                <img src="images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
+                <img src="images/elves-chasm.jpg" alt="theme 2" width="100px" height="100px">
+                <img src="images/elves-chasm.jpg" alt="theme 3" width="100px" height="100px">
+                <img src="images/elves-chasm.jpg" alt="theme 4" width="100px" height="100px">
+                <img src="images/elves-chasm.jpg" alt="theme 5" width="100px" height="100px">
+            </div>
         </section>
         </main>
         <footer>
 <p>©️2025 White Water Rafting | Aaliyah Forbes </p>
 <nav class="Sociallinks">
     <a href="https://facebook.com">
-    <img src="images/facebook.webp" alt="facebook">
+    <img src="images/facebook.webp" alt="facebook" width="50px" height="50px">
 </a>
 <a href="https://whatsapp.com">
-<img src="images/whatsapp.png" alt="whatsapp">
+<img src="images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
 </a>
 <a href="https://instagram.com">
-<img src="images/instagram.webp" alt="instagram">
+<img src="images/instagram.webp" alt="instagram" width="50px" height="50px">
 </a>
+</nav>
         </footer>
         </body>
     
