--- a/about.html
+++ b/about.html
@@ -45,11 +45,26 @@
         <section>
             <h2>Adventure Awaits You!</h2>
             <div class="Caption">
+                <figure>
                 <img src="images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
+                <figcaption>Adventure time</figcaption>
+            </figure>
+                <figure>
                 <img src="images/elves-chasm.jpg" alt="theme 2" width="100px" height="100px">
+                <figcaption>Aventure time</figcaption>
+            </figure>
+                <figure>
                 <img src="images/elves-chasm.jpg" alt="theme 3" width="100px" height="100px">
+                <figcaption>Adventure time</figcaption>
+            </figure>
+                <figure>
                 <img src="images/elves-chasm.jpg" alt="theme 4" width="100px" height="100px">
+                <figcaption>Adventure time</figcaption>
+            </figure>
+                <figure>
                 <img src="images/elves-chasm.jpg" alt="theme 5" width="100px" height="100px">
+                <figcaption>Adventure time</figcaption>
+            </figure>
             </div>
         </section>
         </main>
