--- a/about.html
+++ b/about.html
@@ -50,19 +50,19 @@
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/elves-chasm.jpg" alt="theme 2" width="100px" height="100px">
+                <img src="images/rafting19_600.jpg" alt="theme 2" width="100px" height="100px">
                 <figcaption>Aventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/elves-chasm.jpg" alt="theme 3" width="100px" height="100px">
+                <img src="images/rafting26_600.jpg" alt="theme 3" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/elves-chasm.jpg" alt="theme 4" width="100px" height="100px">
+                <img src="images/rafting58_600.jpg" alt="theme 4" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/elves-chasm.jpg" alt="theme 5" width="100px" height="100px">
+                <img src="images/rafting64_600.jpg" alt="theme 5" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
             </div>
