--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
+    <meta name="description" content="Contact page displays relevant information about the website.">
     <meta name="author" content="your name">
     <link rel="stylesheet" href="../styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,8 +36,28 @@
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
 
+                    <label>
+                    <input type="radio" Name="options"
+                    value="General Inquiry"> General Inquiry
+                </label>
+
+                <label>
+                    <input type="radio" Name="options"
+                    value="Reservation Question"> Reservation Question
+                </label>
+
+                <label>
+                    <input type="radio" Name="options"
+                    value="Website Suggestion"> Website Suggestion
+                </label>
+
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="5" cols="40" required></textarea>
+
+                <label>
+                    <input type="checkbox">
+                    Please subscribe me to the monthly newsletter
+                </label>
 
                     <input type="submit" value="Submit">
                 </form>
@@ -58,16 +78,24 @@
 
 <footer>
 <p>©️2025 White Water Rafting | Aaliyah Forbes </p>
+
+
 <nav class="Sociallinks">
+    <p>wire frame</p>
+<a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
+
     <a href="/images/facebook.webp">
     <img src="/images/facebook.webp" alt="facebook" width="50px" height="50px">
 </a>
+
 <a href="/images/whatsapp.png">
 <img src="/images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
 </a>
+
 <a href="/images/instagram.webp">
 <img src="/images/instagram.webp" alt="instagram" width="50px" height="50px">
 </a>
+
 </nav>
         </footer>
         </body>
