--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -85,15 +85,15 @@
 <a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
 
     <a href="/images/facebook.webp">
-    <img src="/images/facebook.webp" alt="facebook" width="50px" height="50px">
+    <img src="/images/facebook.webp" alt="facebook" width="30" height="30">
 </a>
 
 <a href="/images/whatsapp.png">
-<img src="/images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
+<img src="/images/whatsapp.png" alt="whatsapp" width="50" height="50">
 </a>
 
 <a href="/images/instagram.webp">
-<img src="/images/instagram.webp" alt="instagram" width="50px" height="50px">
+<img src="/images/instagram.webp" alt="instagram" width="50" height="50">
 </a>
 
 </nav>
