--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact White Water Rafting</title>
     <meta name="description" content="Contact page displays relevant information about the website.">
     <meta name="author" content="your name">
     <link rel="stylesheet" href="../styles/rafting.css">
@@ -59,7 +59,7 @@
                     Please subscribe me to the monthly newsletter
                 </label>
 
-                    <input type="submit" value="Submit">
+                    <button type="submit" value="Submit">
                 </form>
 </section>
 
@@ -72,6 +72,12 @@
     <h2>Contact Info</h2>
     <p>Telephone No: +1 (784) 123-4567<br>
     Email:infowhiterafting@gmail.com</p>
+    <div class="map">
+        <iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1142.4797114789924!2d-61.22302824720778!3d13.174322631462834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2svc!4v1740095589602!5m2!1sen!2svc" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </iframe>
+    </div>
+
 </section>
 
 </main>
@@ -85,7 +91,7 @@
 <a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
 
     <a href="/images/facebook.webp">
-    <img src="/images/facebook.webp" alt="facebook" width="30" height="30">
+    <img src="/images/facebook.webp" alt="facebook" width="50" height="50">
 </a>
 
 <a href="/images/whatsapp.png">
