fixed cintact link

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <a href="Index.html">Home</a>
             <a href="about.html">About us</a>
             <a href="Trips.html">Trips</a>
-            <a href="Contacts.html">Contact us</a>
+            <a href="contact.html">Contact us</a>
         </div>
         </nav>
     </header>
