--- a/Trips.html
+++ b/Trips.html
@@ -6,7 +6,7 @@
     <title>Our Rafting Trips</title>
     <meta name="description" content="Explore our exciting white water rafting trips. Choose the adventure that's right for you!">
     <meta name="author" content="Aaliyah Forbes">
-    <link rel="stylesheet" href="../styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="../images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
+            <img src="images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
             <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
