--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <nav>
             <img src="images/z-raftingbw.png" alt="imagelogo" width 200>
             <div class="Navigation">
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About us</a>
             <a href="Trips.html">Trips</a>
             <a href="contact.html">Contact us</a>
