--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact White Water Rafting</title>
     <meta name="description" content="Contact page displays relevant information about the website.">
     <meta name="author" content="your name">
-    <link rel="stylesheet" href="../styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <nav>
             <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About us</a>
             <a href="Trips.html">Trips</a>
             <a href="contact.html">Contact us</a>
