--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-
+</head>
 <body>
     <header>
         <nav>
@@ -28,7 +28,7 @@
     <main>
     <h1>Aaliyah Forbes | WDD 130</h1>
     <img src="images/profile.jpg" alt="profile.jpg" width="200">
-    <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
+    <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime, being together with my family and friends and so forth. Come and Join me on a quest where adventure and fun awaits us at White Water Rafting in the Caribbean Islands.</p>
 </main>
 <aside>
 <h2>Kingstown</h2>
@@ -36,8 +36,8 @@
 <p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Goldenapple Juice and our National Bird is called the Amazona Guildingii</p>
 </aside>
 <footer>
-    <p>©️2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
-    </footer>
+<p>©️ 2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
+</footer>
 </body>
 
 </html>
