--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
