--- a/Trips.html
+++ b/Trips.html
@@ -18,7 +18,7 @@
             <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
-                <a href="Trips.html">Trips</a>
+                <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact Us</a>
             </div>
         </nav>
