--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
 <body>
     <header>
         <nav>
-            <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
-            <a href="Trips.html">Trips</a>
+            <a href="trips.html">Trips</a>
             <a href="contact.html">Contact us</a>
         </div>
         </nav>
