--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en-US">
     
 <head>
-    <Meta charset="utf-8">
+    <Meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> aaliyah forbes | WDD 130</title>
-    <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
-    <meta name="author" content="your name">
+    <meta name="description" content="Welcome to the home page created by me; Aaliyah. This course is WDD130 Web Fundemantals, The purpose of this page is to portray my individuality, my Island, likes and soforth. I hope that your journey will also be my journey that we can share togther and make your exprience will an unforgettable moment because 'YOUR MEMORIES IS OUR CORE MEMORY'">
+    <meta name="author" content="Aaliyah Forbes">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-
+</head>
 <body>
     <header>
         <nav>
-                <img src="images/z-raftingbw.png" alt="imagelogo" width="200">
+                <img src="images/z-raftingbw.png" alt="White Water Rafting logo" width="200">
                 <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
-                <a href="Trips.html">Trips</a>
+                <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact us</a>
             </div>
         </nav>
@@ -28,16 +28,16 @@
     <main>
     <h1>Aaliyah Forbes | WDD 130</h1>
     <img src="images/profile.jpg" alt="profile.jpg" width="200">
-    <p>Hello! my name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime</p>
+    <p>Hello! Welcome to the home page created by me Aaliyah. This course is WDD130 Web Fundementals. The purpose of this page is to portray my individuality, my island, likes and etc. I hope that your journey will also be my journey, that we can share together and make your experiences an unforgettable moment because 'YOUR MEMORIES ARE OUR CORE MEMORY'. My name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime, spending time with my family and friends, and more. Come and join me on a quest where adventure and fun await us at White Water Rafting in the Caribbean Islands. </p>
 </main>
 <aside>
 <h2>Kingstown</h2>
 <img src="images/kingstown.jpg" alt="Kingstown land">
-<p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Goldenapple Juice and our National Bird is called the Amazona Guildingii</p>
+<p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Golden Apple Juice and our National Bird is called the Amazona Guildingii</p>
 </aside>
 <footer>
-    <p>©️2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
-    </footer>
+<p>©️ 2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
+</footer>
 </body>
 
 </html>
