--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <aside>
 <h2>Kingstown</h2>
 <img src="images/kingstown.jpg" alt="Kingstown land">
-<p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our national dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Golden Apple Juice and our National Bird is called the Amazona Guildingii</p>
+<p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our National dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Golden Apple Juice and our National Bird is called the Amazona Guildingii</p>
 </aside>
 <footer>
 <p>©️ 2025 | Aaliyah Forbes | Kingstown, Saint Vincent and the Grenadines</p>
