--- a/about.html
+++ b/about.html
@@ -46,23 +46,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="Caption">
                 <figure>
-                <img src="images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
+                <img src="wwr/images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/rafting19_600.jpg" alt="theme 2" width="100px" height="100px">
+                <img src="wwr/images/rafting19_600.jpg" alt="theme 2" width="100px" height="100px">
                 <figcaption>Aventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/rafting26_600.jpg" alt="theme 3" width="100px" height="100px">
+                <img src="wwr/images/rafting26_600.jpg" alt="theme 3" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/rafting58_600.jpg" alt="theme 4" width="100px" height="100px">
+                <img src="wwr/images/rafting58_600.jpg" alt="theme 4" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
                 <figure>
-                <img src="images/rafting64_600.jpg" alt="theme 5" width="100px" height="100px">
+                <img src="wwr/images/rafting64_600.jpg" alt="theme 5" width="100px" height="100px">
                 <figcaption>Adventure time</figcaption>
             </figure>
             </div>
@@ -72,13 +72,13 @@
 <p>©️2025 White Water Rafting | Aaliyah Forbes </p>
 <nav class="Sociallinks">
     <a href="https://facebook.com">
-    <img src="images/facebook.webp" alt="facebook" width="50px" height="50px">
+    <img src="wwr/images/facebook.webp" alt="facebook" width="50px" height="50px">
 </a>
 <a href="https://whatsapp.com">
-<img src="images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
+<img src="wwr/images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
 </a>
 <a href="https://instagram.com">
-<img src="images/instagram.webp" alt="instagram" width="50px" height="50px">
+<img src="wwr/images/instagram.webp" alt="instagram" width="50px" height="50px">
 </a>
 </nav>
         </footer>
