--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="wwr/images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
@@ -91,15 +91,15 @@
 <a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
 
     <a href="/images/facebook.webp">
-    <img src="/images/facebook.webp" alt="facebook" width="50" height="50">
+    <img src="wwr/images/facebook.webp" alt="facebook" width="50" height="50">
 </a>
 
 <a href="/images/whatsapp.png">
-<img src="/images/whatsapp.png" alt="whatsapp" width="50" height="50">
+<img src="wwr/images/whatsapp.png" alt="whatsapp" width="50" height="50">
 </a>
 
 <a href="/images/instagram.webp">
-<img src="/images/instagram.webp" alt="instagram" width="50" height="50">
+<img src="wwr/images/instagram.webp" alt="instagram" width="50" height="50">
 </a>
 
 </nav>
