--- a/Trips.html
+++ b/Trips.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
+            <img src="wwr/images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
             <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -107,13 +107,13 @@
         <p>©️2025 White Water Rafting | Aaliyah Forbes</p>
         <nav class="Sociallinks">
             <a href="https://facebook.com">
-                <img src="../images/facebook.webp" alt="Facebook" width="50px" height="50px">
+                <img src="wwr/images/facebook.webp" alt="Facebook" width="50px" height="50px">
             </a>
             <a href="https://whatsapp.com">
-                <img src="../images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
+                <img src="wwr/images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
             </a>
             <a href="https://instagram.com">
-                <img src="../images/instagram.webp" alt="Instagram" width="50px" height="50px">
+                <img src="wwr/images/instagram.webp" alt="Instagram" width="50px" height="50px">
             </a>
         </nav>
         <a href="../images/trips_wireframe.png"><img src="../images/trips_wireframe.png" alt="Trips Page Wireframe" width="200"></a>
