--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-                <img src="images/z-raftingbw.png" alt="White Water Rafting logo" width="200">
+                <img src="wwr/images/z-raftingbw.png" alt="White Water Rafting logo" width="200">
                 <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
@@ -27,12 +27,12 @@
     </header>
     <main>
     <h1>Aaliyah Forbes | WDD 130</h1>
-    <img src="images/profile.jpg" alt="profile.jpg" width="200">
+    <img src="wwr/images/profile.jpg" alt="profile.jpg" width="200">
     <p>Hello! Welcome to the home page created by me Aaliyah. This course is WDD130 Web Fundementals. The purpose of this page is to portray my individuality, my island, likes and etc. I hope that your journey will also be my journey, that we can share together and make your experiences an unforgettable moment because 'YOUR MEMORIES ARE OUR CORE MEMORY'. My name is Aaliyah Forbes and I am from Kingstown, Saint Vincent and the Grenadines. I enjoy watching anime, spending time with my family and friends, and more. Come and join me on a quest where adventure and fun await us at White Water Rafting in the Caribbean Islands. </p>
 </main>
 <aside>
 <h2>Kingstown</h2>
-<img src="images/kingstown.jpg" alt="Kingstown land">
+<img src="wwr/images/kingstown.jpg" alt="Kingstown land">
 <p> Saint Vincent and the Grenadines is made up of 32 Island and Cays.The Climate is tropical and has 2 seasons; rainy and dry season. Our National dish is roasted breadfruit and fried jackfish. The national Drink of the Island is Golden Apple Juice and our National Bird is called the Amazona Guildingii</p>
 </aside>
 <footer>
