--- a/Trips.html
+++ b/Trips.html
@@ -6,7 +6,7 @@
     <title>Our Rafting Trips</title>
     <meta name="description" content="Explore our exciting white water rafting trips. Choose the adventure that's right for you!">
     <meta name="author" content="Aaliyah Forbes">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="wwr/styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -116,7 +116,8 @@
                 <img src="wwr/images/instagram.webp" alt="Instagram" width="50px" height="50px">
             </a>
         </nav>
-        <a href="../images/trips_wireframe.png"><img src="../images/trips_wireframe.png" alt="Trips Page Wireframe" width="200"></a>
+        <a href="../images/trips_wireframe.png">
+            <img src="../images/trips_wireframe.png" alt="Trips Page Wireframe" width="200"></a>
     </footer>
 </body>
 </html>
