--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title> aaliyah forbes | WDD 130</title>
     <meta name="description" content="Welcome to the home page created by me; Aaliyah. This course is WDD130 Web Fundemantals, The purpose of this page is to portray my individuality, my Island, likes and soforth. I hope that your journey will also be my journey that we can share togther and make your exprience will an unforgettable moment because 'YOUR MEMORIES IS OUR CORE MEMORY'">
     <meta name="author" content="Aaliyah Forbes">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="wwr/styles/styles.css">
+    <link rel="stylesheet" href="wwr/styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
