--- a/Trips.html
+++ b/Trips.html
@@ -6,7 +6,7 @@
     <title>Our Rafting Trips</title>
     <meta name="description" content="Explore our exciting white water rafting trips. Choose the adventure that's right for you!">
     <meta name="author" content="Aaliyah Forbes">
-    <link rel="stylesheet" href="wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="wwr/images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
+            <img src="images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
             <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -107,13 +107,13 @@
         <p>©️2025 White Water Rafting | Aaliyah Forbes</p>
         <nav class="Sociallinks">
             <a href="https://facebook.com">
-                <img src="wwr/images/facebook.webp" alt="Facebook" width="50px" height="50px">
+                <img src="images/facebook.webp" alt="Facebook" width="50px" height="50px">
             </a>
             <a href="https://whatsapp.com">
-                <img src="wwr/images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
+                <img src="images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
             </a>
             <a href="https://instagram.com">
-                <img src="wwr/images/instagram.webp" alt="Instagram" width="50px" height="50px">
+                <img src="images/instagram.webp" alt="Instagram" width="50px" height="50px">
             </a>
         </nav>
         <a href="../images/trips_wireframe.png">
