--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-                <img src="wwr/images/z-raftingbw.png" alt="White Water Rafting logo" width="200">
+                <img src="images/z-raftingbw.png" alt="White Water Rafting logo" width="200">
                 <div class="Navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
