--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
         <title> WWR About us</title>
         <meta name="description" content="describe your home page here using keywords like your name, the course, the purpose of the page.">
         <meta name="author" content="your name">
-        <link rel="stylesheet" href="/wwr/styles/rafting.css">
+        <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
 <body>
     <header>
         <nav>
-            <img src="/wwr/images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
-            <a href="wwr/index.html">Home</a>
-            <a href="wwr/about.html">About Us</a>
-            <a href="wwr/trips.html">Trips</a>
-            <a href="wwr/contact.html">Contact Us</a>
+            <a href="../index.html">Home</a>
+            <a href="../about.html">About Us</a>
+            <a href="../trips.html">Trips</a>
+            <a href="../contact.html">Contact Us</a>
         </div>
         </nav>
     </header>
@@ -30,7 +30,7 @@
                     
                     <div class="borderhero">
                         <p> Purpose, Mission, Motto... Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia obcaecati aliquam perspiciatis quo, excepturi sunt error alias voluptatibus asperiores natus provident, expedita sit nulla. Eos fugiat repellat tempora inventore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere eaque repellendus non dolores, sed eius reprehenderit sapiente? Pariatur totam quo vel, at quisquam, aliquam vero omnis, ipsum consequatur officia velit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum libero, minus suscipit commodi reprehenderit soluta optio hic mollitia perspiciatis deserunt sint, eaque eligendi distinctio sequi consectetur ipsum dicta amet sapiente.</p>
-                <img src="/wwr/images/rafting59_600.jpg" alt="Siteimage" width="150px"   height="150px">
+                <img src="../images/rafting59_600.jpg" alt="Siteimage" width="150px"   height="150px">
                 </div>
         </article>
             <div class="histophoto">
@@ -38,7 +38,7 @@
                 <h2>History</h2>
                 <p>History of the company how it began etc.. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium deleniti architecto, in, cumque maxime quod optio minima quia magni quae porro commodi reiciendis deserunt ut repellendus voluptatem beatae corporis sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Quas placeat harum nihil.</p>
-                    <img src="/wwr/images/z-raftingbw.png" alt="HIstory summary" width="300px" height="200px">
+                    <img src="../images/z-raftingbw.png" alt="HIstory summary" width="300px" height="200px">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt cum, modi maiores, sed fugiat voluptatibus porro, veniam dolorem nihil minima quo eos ratione fugit! Omnis libero labore expedita sequi provident! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi facere veniam temporibus facilis ex ipsa sed consectetur. Dolor optio sed harum, distinctio facilis laboriosam consequuntur praesentium aut, temporibus magnam in?
                 </div>
                 </section> 
@@ -46,23 +46,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="Caption">
                 <figure>
-                <img src="/wwr/images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
+                <img src="../images/elves-chasm.jpg" alt="theme 1"  width="100px" height="100px">
                 <figcaption>Into the fairies trap</figcaption>
             </figure>
                 <figure>
-                <img src="/wwr/images/rafting19_600.jpg" alt="theme 2" width="100px" height="100px">
+                <img src="../images/rafting19_600.jpg" alt="theme 2" width="100px" height="100px">
                 <figcaption>No Regrets</figcaption>
             </figure>
                 <figure>
-                <img src="/wwr/images/rafting26_600.jpg" alt="theme 3" width="100px" height="100px">
+                <img src="../images/rafting26_600.jpg" alt="theme 3" width="100px" height="100px">
                 <figcaption>Floatzel</figcaption>
             </figure>
                 <figure>
-                <img src="/wwr/images/rafting58_600.jpg" alt="theme 4" width="100px" height="100px">
+                <img src="../images/rafting58_600.jpg" alt="theme 4" width="100px" height="100px">
                 <figcaption>Ambience</figcaption>
             </figure>
                 <figure>
-                <img src="/wwr/images/rafting64_600.jpg" alt="theme 5" width="100px" height="100px">
+                <img src="../images/rafting64_600.jpg" alt="theme 5" width="100px" height="100px">
                 <figcaption>The Great Run</figcaption>
             </figure>
             </div>
@@ -72,13 +72,13 @@
 <p>©️2025 White Water Rafting | Aaliyah Forbes </p>
 <nav class="Sociallinks">
     <a href="https://facebook.com">
-    <img src="/wwr/images/facebook.webp" alt="facebook" width="50px" height="50px">
+    <img src="../images/facebook.webp" alt="facebook" width="50px" height="50px">
 </a>
 <a href="https://whatsapp.com">
-<img src="/wwr/images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
+<img src="../images/whatsapp.png" alt="whatsapp" width="50px" height="50px">
 </a>
 <a href="https://instagram.com">
-<img src="/wwr/images/instagram.webp" alt="instagram" width="50px" height="50px">
+<img src="../images/instagram.webp" alt="instagram" width="50px" height="50px">
 </a>
 </nav>
         </footer>
