--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <title>Contact White Water Rafting</title>
     <meta name="description" content="Contact page displays relevant information about the website.">
     <meta name="author" content="your name">
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
 <body>
     <header>
         <nav>
-            <img src="/wwr/images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
-            <a href="wwr/index.html">Home</a>
-            <a href="wwr/about.html">About Us</a>
-            <a href="wwr/trips.html">Trips</a>
-            <a href="wwr/contact.html">Contact Us</a>
+            <a href="../index.html">Home</a>
+            <a href="../about.html">About Us</a>
+            <a href="../trips.html">Trips</a>
+            <a href="../contact.html">Contact Us</a>
         </div>
         </nav>
     </header>
@@ -91,15 +91,15 @@
 <a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
 
     <a href="/images/facebook.webp">
-    <img src="/wwr/images/facebook.webp" alt="facebook" width="50" height="50">
+    <img src="../images/facebook.webp" alt="facebook" width="50" height="50">
 </a>
 
 <a href="/images/whatsapp.png">
-<img src="/wwr/images/whatsapp.png" alt="whatsapp" width="50" height="50">
+<img src="../images/whatsapp.png" alt="whatsapp" width="50" height="50">
 </a>
 
 <a href="/images/instagram.webp">
-<img src="/wwr/images/instagram.webp" alt="instagram" width="50" height="50">
+<img src="../images/instagram.webp" alt="instagram" width="50" height="50">
 </a>
 
 </nav>
