--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -6,7 +6,7 @@
     <title>Our Rafting Trips</title>
     <meta name="description" content="Explore our exciting white water rafting trips. Choose the adventure that's right for you!">
     <meta name="author" content="Aaliyah Forbes">
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
 <body>
     <header>
         <nav>
-            <img src="/wwr/images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
+            <img src="../images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
             <div class="Navigation">
-                <a href="wwr/index.html">Home</a>
-                <a href="wwr/about.html">About Us</a>
-                <a href="wwr/trips.html">Trips</a>
-                <a href="wwr/contact.html">Contact Us</a>
+                <a href="../index.html">Home</a>
+                <a href="../about.html">About Us</a>
+                <a href="../trips.html">Trips</a>
+                <a href="../contact.html">Contact Us</a>
             </div>
         </nav>
     </header>
@@ -28,7 +28,7 @@
         <section class="call-to-action">
             <h2>Ready for an Adventure?</h2>
             <p>Contact us today to book your unforgettable rafting trip!</p>
-            <a href="/wwr/contact.html" class="cta-button">Contact Us</a>
+            <a href="../contact.html" class="cta-button">Contact Us</a>
         </section>
 
         <section class="trip-descriptions">
@@ -107,13 +107,13 @@
         <p>©️2025 White Water Rafting | Aaliyah Forbes</p>
         <nav class="Sociallinks">
             <a href="https://facebook.com">
-                <img src="/wwr/images/facebook.webp" alt="Facebook" width="50px" height="50px">
+                <img src="../images/facebook.webp" alt="Facebook" width="50px" height="50px">
             </a>
             <a href="https://whatsapp.com">
-                <img src="/wwr/images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
+                <img src="../images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
             </a>
             <a href="https://instagram.com">
-                <img src="/wwr/images/instagram.webp" alt="Instagram" width="50px" height="50px">
+                <img src="../images/instagram.webp" alt="Instagram" width="50px" height="50px">
             </a>
         </nav>
         <a href="../images/trips_wireframe.png">
