--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <nav>
-            <img src="../images/z-raftingbw.png" alt="imagelogo" width="200">
+            <img src="images/z-raftingbw.png" alt="imagelogo" width="200">
             <div class="Navigation">
-            <a href="../index.html">Home</a>
-            <a href="../about.html">About Us</a>
-            <a href="../trips.html">Trips</a>
-            <a href="../contact.html">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </div>
         </nav>
     </header>
@@ -91,15 +91,15 @@
 <a href="//app.moqups.com/fS76QfwmpXgZHIGJ7tkMgR0IJiFqf6Q3/view/page/ad64222d5" target="_blank">Click here</a>
 
     <a href="/images/facebook.webp">
-    <img src="../images/facebook.webp" alt="facebook" width="50" height="50">
+    <img src="images/facebook.webp" alt="facebook" width="50" height="50">
 </a>
 
 <a href="/images/whatsapp.png">
-<img src="../images/whatsapp.png" alt="whatsapp" width="50" height="50">
+<img src="images/whatsapp.png" alt="whatsapp" width="50" height="50">
 </a>
 
 <a href="/images/instagram.webp">
-<img src="../images/instagram.webp" alt="instagram" width="50" height="50">
+<img src="images/instagram.webp" alt="instagram" width="50" height="50">
 </a>
 
 </nav>
