--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <nav>
-            <img src="../images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
+            <img src="images/z-raftingbw.png" alt="White Water Rafting Logo" width="200">
             <div class="Navigation">
-                <a href="../index.html">Home</a>
-                <a href="../about.html">About Us</a>
-                <a href="../trips.html">Trips</a>
-                <a href="../contact.html">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </div>
         </nav>
     </header>
@@ -28,7 +28,7 @@
         <section class="call-to-action">
             <h2>Ready for an Adventure?</h2>
             <p>Contact us today to book your unforgettable rafting trip!</p>
-            <a href="../contact.html" class="cta-button">Contact Us</a>
+            <a href="contact.html" class="cta-button">Contact Us</a>
         </section>
 
         <section class="trip-descriptions">
@@ -107,17 +107,17 @@
         <p>©️2025 White Water Rafting | Aaliyah Forbes</p>
         <nav class="Sociallinks">
             <a href="https://facebook.com">
-                <img src="../images/facebook.webp" alt="Facebook" width="50px" height="50px">
+                <img src="images/facebook.webp" alt="Facebook" width="50px" height="50px">
             </a>
             <a href="https://whatsapp.com">
-                <img src="../images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
+                <img src="images/whatsapp.png" alt="WhatsApp" width="50px" height="50px">
             </a>
             <a href="https://instagram.com">
-                <img src="../images/instagram.webp" alt="Instagram" width="50px" height="50px">
+                <img src="images/instagram.webp" alt="Instagram" width="50px" height="50px">
             </a>
         </nav>
-        <a href="../images/trips_wireframe.png">
-            <img src="../images/trips_wireframe.png" alt="Trips Page Wireframe" width="200"></a>
+        <a href="images/trips_wireframe.png">
+            <img src="images/trips_wireframe.png" alt="Trips Page Wireframe" width="200"></a>
     </footer>
 </body>
 </html>
